# brainfry

./: README.md
aoc/2025/: .gitignore  day_1.c
csapp/labs/perfkit/: CMakeLists.txt
csapp/labs/perfkit/include/perfkit/: timer.hpp
csapp/labs/perfkit/tests/: CMakeLists.txt  test_runner.cpp  test_timer.cpp
datastructures/skiplist/: skiplist.c  skiplist.h
tcpip/: .nvimrc  CMakeLists.txt  Dockerfile  README.md  dev.sh
tcpip/include/tcpip/: debug.h  icmp.h  ip.h  netdev.h
tcpip/src/: debug.c  icmp.c  ip.c  main.c  netdev.c
